...
                Text(
                    text = "Welcome to Teamorg",
                    style = MaterialTheme.typography.headlineLarge,
                    color = Color.White
                )
                Text(
                    text = "You're not part of a team yet.",
                    style = MaterialTheme.typography.bodyLarge,
                    color = Color.Gray
                )
            }

            // 2. Join a team Section
...
